clusters/homelab/apps/helpdesk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpdesk
  namespace: helpdesk
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: help.events.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helpdesk
                port:
                  number: 80
  tls:
    - hosts:
        - help.events.tafu.casa
      secretName: helpdesk-tls
